--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+      <div>
+          <h2 class="js-clock"></h2>
+      </div>
       <div id="loginDiv" class="hidden">
         <div>
             <span><h2 id="welcomeGuestMessage">Hello! Guest!! </h2></span>
@@ -24,13 +27,24 @@
         </div>
         <button id="logoutButton">Logout</button>
     </div>
-    <div>
-        <h2 class="js-clock"></h2>
+    <div id="todosDiv">
+        <div>
+            <span><form id="todosForm"> 
+                <input id="todosInput" required placeholder=""></input>
+                <button id="todosButton">Enter</button>
+            </form></span>
+        </div>
+        <div>
+            <ul id="todoUl"></ul>
+        </div>
     </div>
     <div>
         <button id="change-color">Give me color</button>
     </div>
 </body>
+
+<!-- 기본 선언 -->
+<script src="src/index.js"></script>
 
 <!-- 개선 : Element 생성/삭제로 변경 필요 -->
 <script src="src/auth/login.js"></script>
