--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="todosDiv">
         <div>
             <span><form id="todosForm"> 
-                <input id="todosInput" required placeholder=""></input>
+                <input id="todosInput" required placeholder="Enter your to-dos here!"></input>
                 <button id="todosButton">Enter</button>
             </form></span>
         </div>
