--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <div>
         <button id="change-color">Give me color</button>
     </div>
+    <div id="weatherDiv">
+        <span id="weatherCity"></span>
+        <span id="weatherName"></span>
+        <span></span>
+    </div>
 </body>
 
 <!-- 기본 선언 -->
@@ -55,7 +60,7 @@
 <script src="src/background.js"></script>
 <script src="src/clock.js"></script>
 
-<!-- 생성 필요 -->
+<!-- 완료 -->
 <script src="src/todo.js"></script>
 
 <!-- 생성 필요 -->
