background color to image

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
             <ul id="todoUl"></ul>
         </div>
     </div>
-    <div>
+    <!-- <div>
         <button id="change-color">Give me color</button>
-    </div>
+    </div> -->
     <div id="weatherDiv">
         <span id="weatherCity"></span>
         <span id="weatherName"></span>
-        <span></span>
     </div>
 </body>
 
