--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div>
           <h2 class="js-clock"></h2>
       </div>
-      <div id="loginDiv" class="hidden">
+      <div id="loginDiv" class="hidden center">
         <div>
             <span><h2 id="welcomeGuestMessage">Hello! Guest!! </h2></span>
         </div>
@@ -21,13 +21,13 @@
             </form></span>
         </div>
     </div>
-    <div id="logoutDiv" class="hidden">
+    <div id="logoutDiv" class="hidden center">
         <div>
             <h2 id="welcomeUserMessage"></h2>
         </div>
         <button id="logoutButton">Logout</button>
     </div>
-    <div id="todosDiv">
+    <div id="todosDiv" class="hidden center">
         <div>
             <span><form id="todosForm"> 
                 <input id="todosInput" required placeholder="Enter your to-dos here!"></input>
@@ -35,7 +35,7 @@
             </form></span>
         </div>
         <div>
-            <ul id="todoUl"></ul>
+            <ul id="todoUl" class="big-font"></ul>
         </div>
     </div>
     <!-- <div>
