--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <title>Vanilla Challenge</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
-
   <body>
       <div>
           <h2 class="js-clock"></h2>
@@ -46,22 +45,12 @@
         <span id="weatherName"></span>
     </div>
 </body>
-
-<!-- 기본 선언 -->
 <script src="src/index.js"></script>
-
-<!-- 개선 : Element 생성/삭제로 변경 필요 -->
-<script src="src/auth/login.js"></script>
-<script src="src/auth/logout.js"></script>
+<script src="src/auth/login.js"></script><!-- 개선 : Element 생성/삭제로 변경 필요 -->
+<script src="src/auth/logout.js"></script><!-- 개선 : Element 생성/삭제로 변경 필요 -->
 <script src="src/auth/authcheck.js"></script>
-
-<!-- 개선 : Image 로 변경 -->
 <script src="src/background.js"></script>
 <script src="src/clock.js"></script>
-
-<!-- 완료 -->
 <script src="src/todo.js"></script>
-
-<!-- 생성 필요 -->
 <script src="src/weather.js"></script>
 </html>
